--- a/templates/index.html.jinja2
+++ b/templates/index.html.jinja2
@@ -2,7 +2,7 @@
 <html>  
 <head>
   <title>Recent Updates</title>
-  <link href="./css/style.css" rel="stylesheet" type="text/css" />
+  <link href="./static/css/style.css" rel="stylesheet" type="text/css" />
 </head>
 <body>
   <h1>Great Updates!</h1>
