--- a/templates/index.html.jinja2
+++ b/templates/index.html.jinja2
@@ -2,6 +2,7 @@
 <html>  
 <head>
   <title>Recent Updates</title>
+  <link href="https://fonts.googleapis.com/css?family=IBM+Plex+Serif" rel="stylesheet">
   <link href="./static/css/style.css" rel="stylesheet" type="text/css" />
 </head>
 <body>
