Added Default time stamping and reporting

--- a/templates/index.html.jinja2
+++ b/templates/index.html.jinja2
@@ -13,6 +13,7 @@
     <tr>
       <th class="left_cell">Show</th>
       <th>Episode</th>
+      <th>Time Added</th>
     </tr>
   </thead>
   <tbody>
@@ -20,6 +21,7 @@
     <tr>
       <td class="left_cell"><strong>{{ episode[0] }}</strong></td>
       <td><a href="{{ episode[1] }}">{{ episode[2] }}</td>
+      <td>{{ episode[3] }}</td>
     </tr>
 {% endfor %}
   </tbody>
