Add download flag to links.

--- a/templates/index.html.jinja2
+++ b/templates/index.html.jinja2
@@ -19,8 +19,8 @@
   <tbody>
 {% for episode in episodes %}
     <tr>
-      <td class="left_cell"><strong>{{ episode[0] }}</strong></td>
-      <td><a href="{{ episode[1] }}">{{ episode[2] }}</td>
+      <td class="show_title"><strong>{{ episode[0] }}</strong></td>
+      <td class="episode_title"><a download href="{{ episode[1] }}">{{ episode[2] }}</td>
       <td class='timestamp'>{{ episode[3] }}</td>
     </tr>
 {% endfor %}
