--- a/static/css/style.css
+++ b/static/css/style.css
@@ -1,9 +1,24 @@
 body {
 font-family: 'IBM Plex Serif', serif;
+background-color:#000000;
 }
 
 #container {
 margin: auto;
+}
+
+th {
+font-size:32px;
+border-bottom:solid green;
+color:#ECC6BD;
+}
+
+.left_cell {
+border-right:solid red;
+}
+
+.right_cell {
+border-left:solid red;
 }
 
 td {
@@ -11,12 +26,17 @@ td {
 width:25%;
 }
 
-td.episode_title {
+td.episode {
 /*position:absolute;*/
 /*padding-right:6%;*/
 /*padding-left:6%;*/
 width:50%;
 }
+
+td.show { 
+/*border: solid red;*/
+}
+
 span.episode {
 font-size: 22px;
 }
@@ -28,15 +48,17 @@ text-align: center;
 
 table {
 position:absolute;
-#top:0;
-#bottom:0;
-#left:0;
-#right:0;
+top:0;
+bottom:0;
+left:0;
+right:0;
+background: linear-gradient(to bottom right, brown, teal);
 width:100%;
 }
 
-td {
+td.episode {
 /*border-bottom: solid black 3px;*/
+
 }
 
 a {
@@ -58,4 +80,5 @@ a:hover {
 a:visited {
 /*  background-color: #ccc;*/
 }
+
 
