--- a/templates/index.html.jinja2
+++ b/templates/index.html.jinja2
@@ -19,9 +19,9 @@
   <tbody>
 {% for episode in episodes %}
     <tr style="background-color:#{{ episode.color }}">
-      <td class="show left_cell"><strong>{{ episode.show_title }}</strong></td>
-      <td class="episode"><a download href="{{ episode.url }}"><span class="episode">{{ episode.episode_title }}</span></a></td>
-      <td class='timestamp right_cell'>{{ episode.timestamp }}</td>
+      <td class="show"><p><strong>{{ episode.show_title }}</strong></p></td>
+      <td class="episode"><p><a download href="{{ episode.url }}">{{ episode.episode_title }}</a></p></td>
+      <td class="timestamptd"><p><span class="timestamp">{{ episode.timestamp }}</span></p></td>
     </tr>
 {% endfor %}
   </tbody>
