--- a/static/css/style.css
+++ b/static/css/style.css
@@ -8,9 +8,11 @@ margin: auto;
 }
 
 th {
-font-size:32px;
+font-size:42px;
 border-bottom:solid green;
 color:#ECC6BD;
+padding-top:0.75%;
+padding-bottom:0.75%;
 }
 
 
@@ -19,14 +21,8 @@ td {
 
 p {
 margin:0;
-padding:2%;
-/*margin-top:1%;*/
-/*margin-bot:1%;*/
-/*margin-side:auto;*/
-/*position:relative;*/
-/*right:2.5%;*/
-/*margin-left:0px;*/
-/*padding-left:0px;*/
+padding:1% 0;
+border:0;
 }
 
 th.left_cell {
@@ -37,32 +33,28 @@ th.right_cell {
 border-left: solid red;
 }
 
-th {
-padding_top:0.85%;
-padding-bottom:0.85%;
-}
 
 td.episode {
-/*position:absolute;*/
-/*padding-right:6%;*/
-/*padding-left:6%;*/
-width:50%;
+width:40%;
 font-size: 23px;
 text-align:center;
 padding: 0 5%;
+font-weight: bold;
 }
 
 td.show { 
 /*border: solid red;*/
-width:25%;
+width:20%;
 border-right:solid red;
 font-size: 24px;
+font-weight: bold;
 }
 
 td.timestamptd {
-width:25%;
+width:20%;
 border-left:solid red;
 font-size: 23px;
+font-weight: bold;
 }
 
 
