--- a/templates/index.html.jinja2
+++ b/templates/index.html.jinja2
@@ -11,17 +11,19 @@
   <table>
   <thead>
     <tr>
-      <th class="left_cell">Show</th>
-      <th>Episode</th>
-      <th class="right_cell">Age</th>
+      <th>Source</th>
+      <th>Title</th>
+      <th>Age</th>
+      <th>Duration</th>
     </tr>
   </thead>
   <tbody>
 {% for episode in episodes %}
     <tr style="background-color:#{{ episode.color }}">
-      <td class="show"><p>{{ episode.show_title }}</p></td>
-      <td class="episode"><p><a download href="{{ episode.url }}">{{ episode.episode_title }}</a></p></td>
-      <td class="timestamptd"><p><span class="timestamp">{{ episode.timestamp }}</span></p></td>
+      <td class="show left"><p>{{ episode.show_title }}</p></td>
+      <td class="episode middle"><p><a download href="{{ episode.url }}">{{ episode.episode_title }}</a></p></td>
+      <td class="timestamptd middle"><p><span class="timestamp">{{ episode.timestamp }}</span></p></td>
+      <td class="duration right"><p>{{ episode.duration }}</p></td>
     </tr>
 {% endfor %}
   </tbody>
