add podview, add full-update capability.

--- a/templates/podview.html.jinja2
+++ b/templates/podview.html.jinja2
@@ -3,7 +3,7 @@
 <head>
   <title>Recent Updates</title>
   <link href="https://fonts.googleapis.com/css?family=IBM+Plex+Serif" rel="stylesheet">
-  <link href="./static/css/style.css" rel="stylesheet" type="text/css" />
+  <link href="/static/css/style.css" rel="stylesheet" type="text/css" />
 </head>
 <body>
   <div id="container">
@@ -20,7 +20,7 @@
   <tbody>
 {% for episode in episodes %}
     <tr style="background-color:#{{ episode.color }}">
-      <td class="show left"><a href="./podview/{{ episode.small_show_title }}"><p>{{ episode.show_title }}</p></a></td>
+      <td class="show left"><p>{{ episode.show_title }}</p></td>
       <td class="episode middle"><p><a download href="{{ episode.url }}">{{ episode.episode_title }}</a></p></td>
       <td class="timestamptd middle"><p><span class="timestamp">{{ episode.timestamp }}</span></p></td>
       <td class="duration right"><p>{{ episode.duration }}</p></td>
@@ -30,7 +30,7 @@
   </table>
   </div>
 </body>
-<script type="text/javascript" src="./static/js/jquery-3.3.1.min.js"></script>
-<script type="text/javascript" src="./static/js/EA.js"></script>
+<script type="text/javascript" src="/static/js/jquery-3.3.1.min.js"></script>
+<script type="text/javascript" src="/static/js/EA.js"></script>
 </html>
 
