--- a/static/css/style.css
+++ b/static/css/style.css
@@ -13,6 +13,7 @@ border-bottom:inset red;
 color:#ECC6BD;
 padding-top:0.75%;
 padding-bottom:0.75%;
+font-family: 'Inconsolata', monospace;
 }
 
 
@@ -47,6 +48,7 @@ font-size: 23px;
 text-align:center;
 padding: 0 5%;
 font-weight: bold;
+font-style:italic;
 }
 
 td.show { 
