--- a/templates/podview.html.jinja2
+++ b/templates/podview.html.jinja2
@@ -21,7 +21,7 @@
 {% for episode in episodes %}
     <tr style="background-color:#{{ episode.color }}">
       <td class="show left"><p>{{ episode.show_title }}</p></td>
-      <td class="episode middle"><p><a download href="{{ episode.url }}">{{ episode.episode_title }}</a></p></td>
+      <td class="episode middle"><p><a download href="{{ episode.url }}">"{{ episode.episode_title }}"</a></p></td>
       <td class="timestamptd middle"><p><span class="timestamp">{{ episode.timestamp }}</span></p></td>
       <td class="duration right"><p>{{ episode.duration }}</p></td>
     </tr>
