Changed the relative links in the template to absolute links

--- a/templates/index.html.jinja2
+++ b/templates/index.html.jinja2
@@ -4,7 +4,7 @@
   <title>Recent Updates</title>
   <link href="https://fonts.googleapis.com/css?family=IBM+Plex+Serif" rel="stylesheet">
   <link href="https://fonts.googleapis.com/css?family=Inconsolata" rel="stylesheet">
-  <link href="./static/css/style.css" rel="stylesheet" type="text/css" />
+  <link href="/static/css/style.css" rel="stylesheet" type="text/css" />
 </head>
 <body>
   <div id="container">
@@ -31,7 +31,7 @@
   </table>
   </div>
 </body>
-<script type="text/javascript" src="./static/js/jquery-3.3.1.min.js"></script>
-<script type="text/javascript" src="./static/js/EA.js"></script>
+<script type="text/javascript" src="/static/js/jquery-3.3.1.min.js"></script>
+<script type="text/javascript" src="/static/js/EA.js"></script>
 </html>
 
