--- a/templates/index.jinja2.html
+++ b/templates/index.jinja2.html
@@ -24,7 +24,7 @@
     Right now I am looking for job opportunities in Japan. I know my way around full stack development (SQL, HTML, CSS JavaScript, jQuery, ReactJS,
     Ruby-on-Rails, Flask, Django) and can do a lot on the Unix command line as well. Having learned all those technologies has given me enough perspective
     to know that what you know is important, but your ability to learn new things all the time is even more important. If you'd like to get in touch,
-    please don't hesitate to <a href="mailto:henrybhaller@gmail.com?Subject=I%20Liked%20Your%20Website" target="_top">get in touch</a>.
+    please don't hesitate to <a href="mailto:henry@henryhaller.website?Subject=I%20Liked%20Your%20Website" target="_top">get in touch</a>.
   </p>
 </body>
 </html>
